#5491 - fix layout problem on base price articles and add the ability to change the payment method in the checkout view

--- a/Views/frontend/_resources/styles/_app.css
+++ b/Views/frontend/_resources/styles/_app.css
@@ -19,7 +19,7 @@
 
 /*	GENERAL FORMATING
 	------------------------------------------------------------------ */
-.clear {height: 0; clear: both;}
+.clear {height: 0; clear: both; float: none; line-height: 0}
 .hidden { display: none }
 strong { font-weight: 700 }
 
